# Bachelor-thesis

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  main.cpp  welcome.txt
include/: analyzer.h  config.h  display.cpp  display.h  graphplotter.h  pulser.h  readfile.cpp  run1776.h  simulation.h  utils.h
presentation/: presentation_bachelor_thesis.aux  presentation_bachelor_thesis.nav  presentation_bachelor_thesis.out  presentation_bachelor_thesis.tex  presentation_bachelor_thesis.toc
src/: analyzer.cpp  config.cpp  display.cpp  graphplotter.cpp  readfile.cpp  run1776.cpp  simulation.cpp  utils.cpp
